tests/interpreter-anf/fail/008-sqrt.hyg
assert(sqrt(8.0f) = 2.0f)